--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,27 @@
     </head>
 <body>
 
-<h2>An Unordered HTML List</h2>
+<h2>Welcome to the test pool page!</h2><br>
 
+<h2>First we need to figure out how sould it look like</h2>
+
+
+<h2>So the list of functionality is</h2>
 <ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
+  <li>Welcome Page + Instruction how to connect and mine</li>
+  <li>Hashrate Graph
+    <img src="images/graph.png" alt="how should it look like">
+  </li>
+  <li>Info </li>
 </ul>  
 
-<h2>An Ordered HTML List</h2>
-
+<!-- <h2>An Ordered HTML List</h2> -->
+<!-- 
 <ol>
   <li>Coffee</li>
   <li>Tea</li>
   <li>Milk</li>
-</ol> 
+</ol>  -->
 
 </body>
 </html>
